test/classes/jplevyak/union_type_hierarchy-2.good
union_type_hierarchy-2.chpl:16: error: unresolved call 'f(C)'
union_type_hierarchy-2.chpl:10: note: candidates are: f(a: D)
